--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,2 @@
-<h1>Welcome#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+ <h1>Welcome To TechBook</h1>
+ <p>Connect with other Tech Professionals.</p>
